implement coliding with the platforms

--- a/phaser3-tutorial-src/part1.html
+++ b/phaser3-tutorial-src/part1.html
@@ -85,6 +85,8 @@
                 repeat: -1
             });
 
+            this.physics.add.collider(player, platforms);
+
         }
 
         function update() {
