--- a/phaser3-tutorial-src/part1.html
+++ b/phaser3-tutorial-src/part1.html
@@ -37,6 +37,7 @@
 
         var player;
         var platforms;
+        var cursors;
         var game = new Phaser.Game(config);
 
         function preload() {
@@ -84,12 +85,32 @@
                 frameRate: 10,
                 repeat: -1
             });
-
             this.physics.add.collider(player, platforms);
-
         }
 
+
+
         function update() {
+            cursors = this.input.keyboard.createCursorKeys();
+            if (cursors.left.isDown) {
+                player.setVelocityX(-160);
+
+                player.anims.play('left', true);
+            }
+            else if (cursors.right.isDown) {
+                player.setVelocityX(160);
+
+                player.anims.play('right', true);
+            }
+            else {
+                player.setVelocityX(0);
+
+                player.anims.play('turn');
+            }
+
+            if (cursors.up.isDown && player.body.touching.down) {
+                player.setVelocityY(-330);
+            }
         }
 
     </script>
