add stars and collecting stars

--- a/phaser3-tutorial-src/part1.html
+++ b/phaser3-tutorial-src/part1.html
@@ -38,6 +38,8 @@
         var player;
         var platforms;
         var cursors;
+        var stars;
+
         var game = new Phaser.Game(config);
 
         function preload() {
@@ -85,13 +87,31 @@
                 frameRate: 10,
                 repeat: -1
             });
+
+            cursors = this.input.keyboard.createCursorKeys();
+
+            //add star dust
+            stars = this.physics.add.group({
+                key: 'star',
+                repeat: 11,
+                setXY: { x: 12, y: 0, stepX: 70 }
+            });
+            stars.children.iterate(function (child) {
+                child.setBounceY(Phaser.Math.FloatBetween(0.4, 0.8));
+            });
+
+
             this.physics.add.collider(player, platforms);
+            this.physics.add.collider(stars, platforms);
+            this.physics.add.overlap(player, stars, collectStar, null, this);
         }
 
 
 
+
+
+
         function update() {
-            cursors = this.input.keyboard.createCursorKeys();
             if (cursors.left.isDown) {
                 player.setVelocityX(-160);
 
@@ -111,6 +131,11 @@
             if (cursors.up.isDown && player.body.touching.down) {
                 player.setVelocityY(-330);
             }
+        }
+
+        function collectStar(player, star) {
+            //hide the star if the body overlaps with it
+            star.disableBody(true, true);
         }
 
     </script>
