--- a/phaser3-tutorial-src/part1.html
+++ b/phaser3-tutorial-src/part1.html
@@ -39,6 +39,8 @@
         var platforms;
         var cursors;
         var stars;
+        var score = 0;
+        var scoreText;
 
         var game = new Phaser.Game(config);
 
@@ -104,6 +106,8 @@
             this.physics.add.collider(player, platforms);
             this.physics.add.collider(stars, platforms);
             this.physics.add.overlap(player, stars, collectStar, null, this);
+            //add score text
+            scoreText = this.add.text(16, 16, 'score: 0', { fontSize: '32px', fill: '#000' });
         }
 
 
@@ -136,6 +140,8 @@
         function collectStar(player, star) {
             //hide the star if the body overlaps with it
             star.disableBody(true, true);
+            score += 10;
+            scoreText.setText('Score: ' + score);
         }
 
     </script>
