--- a/index.html
+++ b/index.html
@@ -4,25 +4,174 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <script src="//cdn.jsdelivr.net/npm/phaser@3.11.0/dist/phaser.js"></script>
   <script src="app.js" defer></script>
   <title>After School Program</title>
+
 </head>
 
 <body>
-  <nav>
-    Navbar
-  </nav>
-  <main>
-    <h1>Middle Sackvile After School Program</h1>
-    <h2>Intro</h2>
-    <div>
-      <img>
-      <p>Test text</p>
-    </div>
-  </main>
-  <footer>
-    Footer
-  </footer>
+
+  <script type="text/javascript">
+
+    var config = {
+      type: Phaser.AUTO,
+      width: 800,
+      height: 600,
+      physics: {
+        default: 'arcade',
+        arcade: {
+          gravity: { y: 300 },
+          debug: false
+        }
+      },
+      scene: {
+        preload: preload,
+        create: create,
+        update: update
+      }
+    };
+
+
+    var player;
+    var platforms;
+    var cursors;
+    var stars;
+    var score = 0;
+    var scoreText;
+    let bombs;
+
+    var game = new Phaser.Game(config);
+
+    function preload() {
+      this.load.image('sky', 'assets/sky.png');
+      this.load.image('ground', 'assets/platform.png');
+      this.load.image('star', 'assets/star.png');
+      this.load.image('bomb', 'assets/bomb.png');
+      this.load.spritesheet('dude',
+        'assets/dude.png',
+        { frameWidth: 32, frameHeight: 48 }
+      );
+    }
+
+    function create() {
+      //The background image is 800 x 600 pixels in size, 400 and 300 places it in the center
+      this.add.image(400, 300, 'sky');
+      platforms = this.physics.add.staticGroup();
+      //the first one has to be doubled in size to go across the canvas screen
+      platforms.create(400, 568, 'ground').setScale(2).refreshBody();
+      platforms.create(600, 400, 'ground');
+      platforms.create(50, 250, 'ground');
+      platforms.create(750, 220, 'ground');
+
+      player = this.physics.add.sprite(100, 450, 'dude');
+
+      player.setBounce(0.2);
+      player.setCollideWorldBounds(true);
+
+      this.anims.create({
+        key: 'left',
+        frames: this.anims.generateFrameNumbers('dude', { start: 0, end: 3 }),
+        frameRate: 10,
+        repeat: -1
+      });
+
+      this.anims.create({
+        key: 'turn',
+        frames: [{ key: 'dude', frame: 4 }],
+        frameRate: 20
+      });
+
+      this.anims.create({
+        key: 'right',
+        frames: this.anims.generateFrameNumbers('dude', { start: 5, end: 8 }),
+        frameRate: 10,
+        repeat: -1
+      });
+
+      cursors = this.input.keyboard.createCursorKeys();
+
+      //add star dust
+      stars = this.physics.add.group({
+        key: 'star',
+        repeat: 11,
+        setXY: { x: 12, y: 0, stepX: 70 }
+      });
+      stars.children.iterate(function (child) {
+        child.setBounceY(Phaser.Math.FloatBetween(0.4, 0.8));
+      });
+
+      bombs = this.physics.add.group();
+      //collisions
+      this.physics.add.collider(player, platforms);
+      this.physics.add.collider(stars, platforms);
+      this.physics.add.collider(bombs, platforms);
+      //overlapping
+      this.physics.add.overlap(player, stars, collectStar, null, this);
+      this.physics.add.collider(player, bombs, hitBomb, null, this);
+
+      //add score text
+      scoreText = this.add.text(16, 16, 'score: 0', { fontSize: '32px', fill: '#000' });
+    }
+
+
+
+
+
+
+    function update() {
+      if (cursors.left.isDown) {
+        player.setVelocityX(-160);
+
+        player.anims.play('left', true);
+      }
+      else if (cursors.right.isDown) {
+        player.setVelocityX(160);
+
+        player.anims.play('right', true);
+      }
+      else {
+        player.setVelocityX(0);
+
+        player.anims.play('turn');
+      }
+
+      if (cursors.up.isDown && player.body.touching.down) {
+        player.setVelocityY(-330);
+      }
+    }
+
+    function collectStar(player, star) {
+      //hide the star if the body overlaps with it
+      star.disableBody(true, true);
+      score += 10;
+      scoreText.setText('Score: ' + score);
+
+      if (stars.countActive(true) === 0) {
+        stars.children.iterate(function (child) {
+
+          child.enableBody(true, child.x, 0, true, true);
+
+        });
+
+        var x = (player.x < 400) ? Phaser.Math.Between(400, 800) : Phaser.Math.Between(0, 400);
+
+        var bomb = bombs.create(x, 16, 'bomb');
+        bomb.setBounce(1);
+        bomb.setCollideWorldBounds(true);
+        bomb.setVelocity(Phaser.Math.Between(-200, 200), 20);
+
+      }
+    }
+
+    function hitBomb(player, bomb) {
+      this.physics.pause();
+      player.setTint(0xff0000);
+      player.anims.play('turn');
+      gameOver = true;
+    }
+
+  </script>
 
 </body>
 
