--- a/index.html
+++ b/index.html
@@ -4,16 +4,57 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"> -->
+
   <script src="//cdn.jsdelivr.net/npm/phaser@3.11.0/dist/phaser.js"></script>
   <script src="app.js" defer></script>
+  <link rel="stylesheet" href="styles.css">
   <title>After School Program</title>
-
 </head>
 
 <body>
-
-
-
+  <nav>Nav</nav>
+  <h1>Middle Sackville Afterschool Program</h1>
+  <p>Unlocking potential, fostering creativity, and building a brighter future - our after-school program is designed to
+    provide a safe and engaging environment for students to learn and grow beyond the classroom. We offer a variety of
+    enriching activities that cater to different interests and age groups.</p>
+  <p>Our dedicated team of educators and mentors is committed to inspiring a love for learning while nurturing important
+    life skills. From homework support to hands-on projects, our program aims to supplement and enhance the educational
+    experience for every participant.</p>
+  <p>Join us as we create a supportive community where each child is encouraged to explore their interests, develop new
+    skills, and build lasting friendships. Our after-school program is not just an extension of the school day; it's a
+    unique opportunity for personal growth and discovery.</p>
+  <p>Key Features:</p>
+  <ul>
+    <li>Homework assistance and academic support</li>
+    <li>Exciting extracurricular activities</li>
+    <li>Team-building exercises</li>
+    <li>Arts and crafts projects</li>
+    <li>Physical fitness activities</li>
+  </ul>
+  <p>Enroll your child today and let's embark on this educational journey together!</p>
+  <button>Register</button>
+  <div>
+    <img src="images/exploration.jpg" alt="After School Program Image" style="max-width: 100%; height: auto;">
+    <p><strong>Exploration and Creativity</strong></p>
+    <p>At our program, we believe in fostering exploration and creativity. Our students engage in hands-on activities
+      that encourage imagination and critical thinking. Join us on a journey where learning is not only educational but
+      also a whole lot of fun!</p>
+  </div>
+  <div>
+    <img src="images/stem.jpg" alt="STEM Learning Image" style="max-width: 100%; height: auto;">
+    <p><strong>STEM Learning Adventures</strong></p>
+    <p>Embark on exciting STEM (Science, Technology, Engineering, and Mathematics) adventures with our specialized
+      program. From robotics workshops to hands-on science experiments, we ignite curiosity and passion for STEM fields,
+      preparing your child for the challenges of the future.</p>
+  </div>
+  <div>
+    <img src="images/rec.jpg" alt="Outdoor Recreation Image" style="max-width: 100%; height: auto;">
+    <p><strong>Outdoor Recreation and Team Building</strong></p>
+    <p>Our after-school program extends beyond the classroom walls. Join us for outdoor adventures that promote
+      teamwork, leadership, and a healthy, active lifestyle. From nature hikes to team sports, we believe in holistic
+      development that goes beyond academic achievement.</p>
+  </div>
 </body>
 
 </html>
