--- a/index.html
+++ b/index.html
@@ -5,7 +5,12 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script src="//cdn.jsdelivr.net/npm/phaser@3.11.0/dist/phaser.js"></script>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
   <script src="app.js" defer></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"
+    defer></script>
   <link rel="stylesheet" href="styles.css">
   <title>After School Program</title>
 </head>
@@ -32,7 +37,7 @@
     <li>Physical fitness activities</li>
   </ul>
   <p>Enroll your child today and let's embark on this educational journey together!</p>
-  <button>Register</button>
+  <button class="btn btn-danger btn-lg">Register</button>
 
   <div>
     <img src="images/exploration.jpg" alt="After School Program Image" style="max-width: 100%; height: auto;">
