add color scheme to web site sections

--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
     <li>Physical fitness activities</li>
   </ul>
   <p>Enroll your child today and let's embark on this educational journey together!</p>
-  <button class="btn btn-danger btn-lg">Register</button>
+  <button class="btn btn-lg">Register</button>
 
-  <div>
+  <div class="higlights">
     <img src="images/exploration.jpg" alt="After School Program Image" style="max-width: 100%; height: auto;">
     <p><strong>Exploration and Creativity</strong></p>
     <p>At our program, we believe in fostering exploration and creativity. Our students engage in hands-on activities
@@ -47,20 +47,24 @@
       also a whole lot of fun!</p>
   </div>
 
-  <div>
+  <div class="higlights">
     <img src="images/stem.jpg" alt="STEM Learning Image" style="max-width: 100%; height: auto;">
     <p><strong>STEM Learning Adventures</strong></p>
     <p>Embark on exciting STEM (Science, Technology, Engineering, and Mathematics) adventures with our specialized
       program. From robotics workshops to hands-on science experiments, we ignite curiosity and passion for STEM fields,
       preparing your child for the challenges of the future.</p>
   </div>
-  <div>
+  <div class="higlights">
     <img src="images/rec.jpg" alt="Outdoor Recreation Image" style="max-width: 100%; height: auto;">
     <p><strong>Outdoor Recreation and Team Building</strong></p>
     <p>Our after-school program extends beyond the classroom walls. Join us for outdoor adventures that promote
       teamwork, leadership, and a healthy, active lifestyle. From nature hikes to team sports, we believe in holistic
       development that goes beyond academic achievement.</p>
   </div>
+
+  <footer>
+
+  </footer>
 
 
 </body>
