--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
   <script src="app.js" defer></script>
-  <link rel="stylesheet" href="output.css">
+  <link rel="stylesheet" type="text/css" href="output.css">
+  <!-- <link rel="stylesheet" type="text/css" href="styles.css"> -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"
     defer></script>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Comic+Neue:ital,wght@1,700&display=swap" rel="stylesheet">
-
-  <link rel="stylesheet" href="styles.css">
+  <!-- <link rel="stylesheet" href="styles.css"> -->
   <title>After School Program</title>
 </head>
 
@@ -46,25 +46,33 @@
 
   <div class="higlights">
     <img src="images/exploration.jpg" alt="After School Program Image" style="max-width: 100%; height: auto;">
-    <p><strong>Exploration and Creativity</strong></p>
-    <p>At our program, we believe in fostering exploration and creativity. Our students engage in hands-on activities
-      that encourage imagination and critical thinking. Join us on a journey where learning is not only educational but
-      also a whole lot of fun!</p>
+    <div class="higlights-text">
+      <p><strong>Exploration and Creativity</strong></p>
+      <p>At our program, we believe in fostering exploration and creativity. Our students engage in hands-on activities
+        that encourage imagination and critical thinking. Join us on a journey where learning is not only educational
+        but
+        also a whole lot of fun!</p>
+    </div>
   </div>
 
   <div class="higlights">
     <img src="images/stem.jpg" alt="STEM Learning Image" style="max-width: 100%; height: auto;">
-    <p><strong>STEM Learning Adventures</strong></p>
-    <p>Embark on exciting STEM (Science, Technology, Engineering, and Mathematics) adventures with our specialized
-      program. From robotics workshops to hands-on science experiments, we ignite curiosity and passion for STEM fields,
-      preparing your child for the challenges of the future.</p>
+    <div class="higlights-text">
+      <p><strong>STEM Learning Adventures</strong></p>
+      <p>Embark on exciting STEM (Science, Technology, Engineering, and Mathematics) adventures with our specialized
+        program. From robotics workshops to hands-on science experiments, we ignite curiosity and passion for STEM
+        fields,
+        preparing your child for the challenges of the future.</p>
+    </div>
   </div>
   <div class="higlights">
     <img src="images/rec.jpg" alt="Outdoor Recreation Image" style="max-width: 100%; height: auto;">
-    <p><strong>Outdoor Recreation and Team Building</strong></p>
-    <p>Our after-school program extends beyond the classroom walls. Join us for outdoor adventures that promote
-      teamwork, leadership, and a healthy, active lifestyle. From nature hikes to team sports, we believe in holistic
-      development that goes beyond academic achievement.</p>
+    <div class="higlights-text">
+      <p><strong>Outdoor Recreation and Team Building</strong></p>
+      <p>Our after-school program extends beyond the classroom walls. Join us for outdoor adventures that promote
+        teamwork, leadership, and a healthy, active lifestyle. From nature hikes to team sports, we believe in holistic
+        development that goes beyond academic achievement.</p>
+    </div>
   </div>
 
   <footer>
