append phaser to the html and add more styles

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <ul>
           <li><a href="#register">Register</a></li>
           <li><a href="#highlights">Highlights</a></li>
-          <li><a href="#game">Game</a></li>
+          <li><a href="#phaser-game">Game</a></li>
         </ul>
       </nav>
     </div>
@@ -105,11 +105,10 @@
           development that goes beyond academic achievement.</p>
       </div>
     </div>
-    <div id="phaser-game">
-
-    </div>
-
   </main>
+  <div id="phaser-game">
+    <p class="game">Play our interactive game</p>
+  </div>
 
 
 
