--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
     integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
   <script src="app.js" defer></script>
   <link rel="stylesheet" type="text/css" href="output.css">
-  <!-- <link rel="stylesheet" type="text/css" href="styles.css"> -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"
     defer></script>
@@ -21,7 +20,6 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Nunito+Sans:opsz,wght@6..12,300&family=Playpen+Sans:wght@600&display=swap"
     rel="stylesheet">
-  <!-- <link rel="stylesheet" href="styles.css"> -->
   <title>After School Program</title>
 </head>
 
@@ -29,7 +27,6 @@
   <header>
     <div class="header-container">
       <nav>
-        <!-- <a id="navicon" href="#"><img src="images/navicon.png" alt="navicon"></a> -->
         <ul>
           <li><a href="#register">Register</a></li>
           <li><a href="#highlights">Highlights</a></li>
@@ -71,7 +68,8 @@
     </div>
     <div class="call-to-action" id="register">
       <p>🌈 Enroll your child today and let's embark on this educational journey together! 🌈</p>
-      <button class="btn btn-lg">Register</button>
+      <!-- credit https://getbootstrap.com/docs/4.0/components/buttons/ -->
+      <button class="btn btn-lg hover:bg-violet-600">Register</button>
     </div>
     <div class="higlights">
       <img src="images/exploration.jpg" alt="After School Program Image">
@@ -107,17 +105,11 @@
     </div>
   </main>
   <div id="phaser-game">
-    <p class="game">Play our interactive game</p>
+    <!-- https://tailwindcss.com/docs/background-color -->
+    <p class="bg-white tracking-wider game">Play our interactive game</p>
   </div>
-
-
-
-
   <footer>
-
   </footer>
-
-
 </body>
 
 </html>
