--- a/index.html
+++ b/index.html
@@ -108,7 +108,8 @@
     <!-- https://tailwindcss.com/docs/background-color -->
     <p class="bg-white tracking-wider game">Play our interactive game</p>
   </div>
-  <footer>
+  <!-- https://tailwindcss.com/docs/gradient-color-stops -->
+  <footer class="bg-gradient-to-r from-indigo-500 from-10% via-sky-500 via-30% to-emerald-500 to-90%">
   </footer>
 </body>
 
