--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="overflow-auto">
 
 <head>
   <meta charset="UTF-8">
@@ -22,23 +22,26 @@
     rel="stylesheet">
   <title>After School Program</title>
 </head>
+<!-- https://tailwindcss.com/docs/background-color -->
 
-<body>
+<body class="bg-[#98ddca]">
   <!-- https://tailwindcss.com/docs/gradient-color-stops -->
   <!-- https://tailwindcss.com/docs/border-width -->
-  <header class="bg-gradient-to-r from-indigo-500 via-purple-500 to-pink-500 border-b-4 border-indigo-500">
-    <div class="header-container">
+  <!-- https://tailwindcss.com/docs/padding -->
+  <header
+    class="py-7 px-2.5 text-white bg-gradient-to-r from-indigo-500 via-purple-500 to-pink-500 border-b-4 border-indigo-500">
+    <div class="flex justify-end items-center my-0 mx-[5%]">
       <nav>
-        <ul>
-          <li><a href="#register">Register</a></li>
-          <li><a href="#highlights">Highlights</a></li>
-          <li><a href="#phaser-game">Game</a></li>
+        <ul class="flex list-none m-0 p-0">
+          <li class="mr-5"><a class="text-white font-bold no-underline text-xl" href="#register">Register</a></li>
+          <li class="mr-5"><a class="text-white font-bold no-underline text-xl" href="#highlights">Highlights</a></li>
+          <li class="mr-5"><a class="text-white font-bold no-underline text-xl" href="#phaser-game">Game</a></li>
         </ul>
       </nav>
     </div>
   </header>
 
-  <main>
+  <main class="my-[5%] mx-[3%] ml-[7%] mr-[7%]">
     <!-- https://tailwindcss.com/docs/text-color https://tailwindcss.com/docs/font-size https://tailwindcss.com/docs/margin-->
     <h1 class="text-yellow-300 text-5xl text-center mb-4">Middle Sackville Afterschool Program</h1>
     <div class="intro mb-[3%]">
@@ -75,9 +78,11 @@
     <div class="call-to-action" id="register">
       <p>🌈 Enroll your child today and let's embark on this educational journey together! 🌈</p>
       <!-- credit https://getbootstrap.com/docs/4.0/components/buttons/ -->
-      <button class="btn btn-lg hover:bg-violet-600">Register</button>
+      <!-- https://tailwindcss.com/docs/width -->
+      <button
+        class="text-stone-50 hover:bg-violet-600 bg-[#ff6f61] text-stone-50 text-[28px] w-1/3 font-bold hover:bg-violet-600 btn btn-lg ">Register</button>
     </div>
-    <div class="higlights">
+    <div class="higlights bg-[#f9e58a]">
       <img src="images/exploration.jpg" alt="After School Program Image">
       <div class="higlights-text">
         <p><strong>Exploration and Creativity</strong></p>
@@ -89,7 +94,7 @@
       </div>
     </div>
 
-    <div class="higlights" id="highlights">
+    <div class="higlights bg-[#f9e58a]" id="highlights">
       <img src="images/stem.jpg" alt="STEM Learning Image">
       <div class="higlights-text">
         <p><strong>STEM Learning Adventures</strong></p>
@@ -99,7 +104,7 @@
           preparing your child for the challenges of the future.</p>
       </div>
     </div>
-    <div class="higlights">
+    <div class="higlights bg-[#f9e58a]">
       <img src="images/rec.jpg" alt="Outdoor Recreation Image">
       <div class="higlights-text">
         <p><strong>Outdoor Recreation and Team Building</strong></p>
@@ -115,7 +120,7 @@
     <p class="bg-white tracking-wider game">Play our interactive game</p>
   </div>
   <!-- https://tailwindcss.com/docs/gradient-color-stops -->
-  <footer class="bg-gradient-to-r from-indigo-500 from-10% via-sky-500 via-30% to-emerald-500 to-90%">
+  <footer class="bg-gradient-to-r from-indigo-500 from-10% via-sky-500 via-30% to-emerald-500 to-90% py-7 px-2.5">
   </footer>
 </body>
 
