add more tailwind styles

--- a/index.html
+++ b/index.html
@@ -40,10 +40,11 @@
       </nav>
     </div>
   </header>
-
+  <!-- text generated with chat gtp -->
   <main class="my-[5%] mx-[3%] ml-[7%] mr-[7%]">
     <!-- https://tailwindcss.com/docs/text-color https://tailwindcss.com/docs/font-size https://tailwindcss.com/docs/margin-->
-    <h1 class="text-yellow-300 text-5xl text-center mb-4">Middle Sackville Afterschool Program</h1>
+    <h1 class="font-['Comic Neue'] italic bold text-yellow-300 text-5xl text-center mb-5">Middle Sackville Afterschool
+      Program</h1>
     <div class="intro mb-[3%]">
       <p class="mb-4">Unlocking potential, fostering creativity, and building a brighter future - our after-school
         program is
@@ -80,7 +81,7 @@
       <!-- credit https://getbootstrap.com/docs/4.0/components/buttons/ -->
       <!-- https://tailwindcss.com/docs/width -->
       <button
-        class="text-stone-50 hover:bg-violet-600 bg-[#ff6f61] text-stone-50 text-[28px] w-1/3 font-bold hover:bg-violet-600 btn btn-lg ">Register</button>
+        class="shadow-xl text-stone-50 hover:bg-violet-600 bg-[#ff6f61] text-stone-50 text-[28px] w-1/3 font-bold hover:bg-violet-600 btn btn-lg ">Register</button>
     </div>
     <div class="higlights bg-[#f9e58a]">
       <img src="images/exploration.jpg" alt="After School Program Image">
