conver regular css to tailwind

--- a/index.html
+++ b/index.html
@@ -53,27 +53,29 @@
         provide a safe and engaging environment for students to learn and grow beyond the classroom. We offer a variety
         of
         enriching activities that cater to different interests and age groups.</p>
-      <p class="mb-4">Our dedicated team of educators and mentors is committed to inspiring a love for learning while
+      <p class="mb-4 text-lg">Our dedicated team of educators and mentors is committed to inspiring a love for learning
+        while
         nurturing
         important
         life skills. From homework support to hands-on projects, our program aims to supplement and enhance the
         educational
         experience for every participant.</p>
-      <p class="mb-4">Join us as we create a supportive community where each child is encouraged to explore their
+      <p class="mb-4 text-lg">Join us as we create a supportive community where each child is encouraged to explore
+        their
         interests, develop
         new
         skills, and build lasting friendships. Our after-school program is not just an extension of the school day; it's
         a
         unique opportunity for personal growth and discovery.</p>
     </div>
-    <div class="key-features">
-      <h2 class="keys">Key Features:</h2>
-      <ul class="m-[2%]">
-        <li>Homework assistance and academic support</li>
-        <li>Exciting extracurricular activities</li>
-        <li>Team-building exercises</li>
-        <li>Arts and crafts projects</li>
-        <li>Physical fitness activities</li>
+    <div>
+      <h2 class="keys text-2xl mb-2 text-[#ff6f61] italic">Key Features:</h2>
+      <ul class="list-disc ml-5 mb-4">
+        <li class="text-lg">Homework assistance and academic support</li>
+        <li class="text-lg">Exciting extracurricular activities</li>
+        <li class="text-lg">Team-building exercises</li>
+        <li class="text-lg">Arts and crafts projects</li>
+        <li class="text-lg">Physical fitness activities</li>
       </ul>
     </div>
     <div class="call-to-action" id="register">
@@ -96,7 +98,7 @@
     </div>
 
     <div class="higlights bg-[#f9e58a]" id="highlights">
-      <img src="images/stem.jpg" alt="STEM Learning Image">
+      <img class="w-[300px] h-auto" src="images/stem.jpg" alt="STEM Learning Image">
       <div class="higlights-text">
         <p><strong>STEM Learning Adventures</strong></p>
         <p>Embark on exciting STEM (Science, Technology, Engineering, and Mathematics) adventures with our specialized
@@ -116,7 +118,7 @@
       </div>
     </div>
   </main>
-  <div id="phaser-game">
+  <div id="phaser-game" class="flex flex-col items-center justify-items-center mb-[3%]">
     <!-- https://tailwindcss.com/docs/background-color -->
     <p class="bg-white tracking-wider game">Play our interactive game</p>
   </div>
