--- a/index.html
+++ b/index.html
@@ -86,6 +86,7 @@
         class="shadow-xl text-stone-50 hover:bg-violet-600 bg-[#ff6f61] text-stone-50 text-[28px] w-1/3 font-bold hover:bg-violet-600 btn btn-lg ">Register</button>
     </div>
     <div class="higlights bg-[#f9e58a]">
+      <!-- picture src https://www.nymetroparents.com/article/How-To-Encourage-Creativity-And-Curiosity-In-Kids -->
       <img src="images/exploration.jpg" alt="After School Program Image">
       <div class="higlights-text">
         <p><strong>Exploration and Creativity</strong></p>
